editing sections 3. intro - and the discussion - moving some to parked

--- a/_posts/thesis_chapters/2023-12-4-Design.md
+++ b/_posts/thesis_chapters/2023-12-4-Design.md
@@ -10,9 +10,6 @@ title: 4. Exploration of the Formative Learning Design Process
 ---
 -   [Research Questions - June 2023](#research-questions---june-2023)
 -   [Chapter Introduction](#chapter-introduction)
--   [Exploring issues and context from practitioner interviews and
-    existing
-    research](#exploring-issues-and-context-from-practitioner-interviews-and-existing-research)
 -   [Short vignette illustrating shifts in scope of
     activity](#short-vignette-illustrating-shifts-in-scope-of-activity)
     -   [Vignette 4.1 - An example of game making activity in
@@ -24,8 +21,8 @@ title: 4. Exploration of the Formative Learning Design Process
             objectives](#environmental-factors-and-objectives)
         -   [Larger objective - Making games for an
             audience](#larger-objective---making-games-for-an-audience)
-        -   [Mid-level objective - Implementing game
-            elements](#mid-level-objective---implementing-game-elements)
+        -   [Mid-level objective - Constructing a game feature by
+            feature](#mid-level-objective---constructing-a-game-feature-by-feature)
         -   [Smaller objectives and actions - Implementing discrete code
             and design
             structures](#smaller-objectives-and-actions---implementing-discrete-code-and-design-structures)
@@ -79,27 +76,17 @@ title: 4. Exploration of the Formative Learning Design Process
     -   [Structuring and using a collection of game design
         patterns](#structuring-and-using-a-collection-of-game-design-patterns)
 -   [Chapter Discussion](#chapter-discussion)
-    -   [Discussion on Authenticity of Tools and
-        Resources](#discussion-on-authenticity-of-tools-and-resources)
-        -   [Empowerment implications of lifting the hood to expose
-            underlying
-            technology](#empowerment-implications-of-lifting-the-hood-to-expose-underlying-technology)
-        -   [Authenticity of processes and
-            documentation](#authenticity-of-processes-and-documentation)
-        -   [Analysing the use of code playground and templated approach
-            through the lens of
-            authenticity](#analysing-the-use-of-code-playground-and-templated-approach-through-the-lens-of-authenticity)
-        -   [Linking authenticity and
-            agency](#linking-authenticity-and-agency)
-        -   [Summary / Link](#summary-link)
     -   [On the emergent and mutual nature of the design and research
         process AND link to
         agency](#on-the-emergent-and-mutual-nature-of-the-design-and-research-process-and-link-to-agency)
         -   [Inactivity illuminating the play
             paradox](#inactivity-illuminating-the-play-paradox)
+    -   [Discussion on authenticity and agency concerning tools and
+        resources](#discussion-on-authenticity-and-agency-concerning-tools-and-resources)
     -   [Summary of barriers and tensions explored in this
         chapter](#summary-of-barriers-and-tensions-explored-in-this-chapter)
     -   [Link to next chapter](#link-to-next-chapter)
+
 
 ## Research Questions - June 2023
 
@@ -276,8 +263,7 @@ The shared objective of one activity system is to make entertaining and educatio
 
 There are diverse end audiences for the games. The final target audience are students and staff in the Manchester Met Brooks building where their games are shared in arcade cabinets at the end of the course. An additional audience are friends and family who can be send the games to play online. The more immediate audience for the evolving games are peer game makers during the making sessions.
 
-![Carrot eater game with an self made arcade box made from cardboard](./Pictures/carroteater2.jpg){width=95%}
-REPLACE WITH DIFFERENT IMAGE?
+![Carrot eater game with an self made arcade box made from cardboard](./Pictures/carroteater3.jpg){width=75%}
 
 While the broad aim of making a game to share is tacitly agreed through participation, there are also diverse motivations stemming from environmental factors in the interrelated actors in this activity which bleed into the tensions which emerge at this level. In the vignette and surrounding data, Toby pays close attention to the challenge and variety of the game playing experience for his projected audience of players. A different example of the tension between competing motivations at this larger level of activity is explored in example 1 of this chapter and related analysis is continued in chapter six.
 
@@ -730,13 +716,9 @@ That week I had omitted them as I felt a sense of urgency coming from families t
 
 <!-- In this emergent design, they had mostly completed asset design and narrative development and the only coding remained. I thus wanted to address the tension between completing the project and alienation from just coding. -->
 
-
-
 ## 3. Tensions due to lack of access and familiarity to tools and processes
 
-In the terminology of activity theory, a conflicts arose due to a contradictions between the desire of participants to use the tools to create games and their lack of experience and knowledge of them. This often resulted in frustration and paralysis in the activity in question.
-
-One conflict, which surfaced in P1, stemmed from unfamiliarity with tools and resulted in frustration and ultimately inaction. In participant feedback for P1, one parent of the family described in the previous section indicated that it took too long before in the planning stage and called for more hands on play and use of the tools of production before being called on to make creative decisions. The parent likened this to an arts studio approach.
+In the terminology of activity theory, a conflicts arose due to a contradictions between the desire of participants to use the tools to create games and their lack of experience and knowledge of them. This often resulted in frustration and paralysis in the activity in question. One conflict, which surfaced in P1, stemmed from unfamiliarity with tools and resulted in frustration and ultimately inaction. In participant feedback for P1, one parent of the family described in the previous section indicated that it took too long before in the planning stage and called for more hands on play and use of the tools of production before being called on to make creative decisions. The parent likened this to an arts studio approach.
 
 While, tensions stemming from gaps in knowledge and practice are commonly addressed in formal learning environments through forms of instruction, the informal nature of this learning setting allowed for more flexible approaches. In P1 I trialled brief class instruction of key coding concepts, e.g. logic statements, that I judged to be relevant to the whole group. Despite trying to limit the time spent on instruction, linking to their experiences and making the process informal, my journal notes reflecting on these interventions were unfavourable. Instead, I was keen to align with the motivational potential of hands-on (learning by experience) approaches to STEM education [@holstermann_hands-activities_2010].
 
@@ -752,19 +734,16 @@ The crux of the challenge involved designing a bespoke  game authoring environme
 
 ### Motivations around in choice of toolset
 
-The process of helping participants build familiarity and competency in tool use was further complicated by my own motivations for working with as authentic as practical game authoring tools.
-
-One motivation was to align to authentic web technology due to my previous experience. The reason for working with code this authentic bears exploration. Characteristics of broader dimensions of authenticity of tools and processes in learning environments are explored in the literature review. A brief summary being: similarity to workplace settings; facilitating activity which serves a need of participants; an ability to showcased resulting work to an audience. FIND CITATION PBL?
-
-While my choice of open source digital tools allowed for a high level of aligning with professional practices, it was also potentially complex in terms of use of tools.
+The process of helping participants build familiarity and competency in tool use was further complicated by my own motivations for working with as authentic as practical game authoring tools. One motivation was to align to authentic web technology due to my previous experience. The reason for working with code this authentic bears exploration. Characteristics of broader dimensions of authenticity of tools and processes in learning environments are explored in the literature review. A brief summary being: similarity to workplace settings; facilitating activity which serves a need of participants; an ability to showcased resulting work to an audience [@shaffer_thick_1999; @warr_bridging_2020]. While my choice of open source digital tools allowed for a high level of aligning with professional practices, it was also potentially complex in terms of use of tools. In part my motivation for choice of code language (Javascript, Phaser) was driven by desire to align with common workplace practices and to be potentially extensible for future student-led web projects.
 
 <!-- As explored in the literature review, an extensive body of research on the design motivations and impact on learners exists for the creative coding tools Scratch.  -->
 
 <!-- A common question for this research is why not use Scratch (see LR / Glossary)? While Scratch, is aimed a broad range of media creation, much of this research involves game making as a popular genre of media of young people. I chose to not use Scratch for this study, partly as it was well researched and partly to prioritise authenticity of tool set.   -->
 
-My motivation for choice of code language (Javascript, Phaser) was driven by desire to be authentic and extensible. The use of glitch.com as a code playground significantly reduced technical barriers for students related to this choice. In terms of first impressions, learners first experience of the experience was in the process of playing a game in a webpage and controlling the character using the computers arrow/ cursor keys which for many was a familiar process.
+By P2, learners first experience of the experience of the tools was in the process of playing an incomplete game in a webpage and controlling the character using the computers arrow/ cursor keys which for many was a familiar process. Due to an intentional fault, players needed to click a remix button, and alter the underlying code to progress in the game. This description encompasses the two main elements described in this section: first, the code playground toolset; and second the starting game template.
 
-NOTE INTEGREATE HOW DESIGNING FOR AUTHENITITY IS A CHALLENGE HERE WHICH IS ALIGNED WITH PBL AND EXPERIENTIAL THEORY, FORESHADOW SHARED DIMENTIONS OF AUTHENTICITY WHICH ARE EXPLORED LATER.
+
+<!-- NOTE INTEGREATE HOW DESIGNING FOR AUTHENITITY IS A CHALLENGE HERE WHICH IS ALIGNED WITH PBL AND EXPERIENTIAL THEORY, FORESHADOW SHARED DIMENTIONS OF AUTHENTICITY WHICH ARE EXPLORED LATER. -->
 
 <!-- I took care to screen participants from processes and tools that were unrealistic for novices to use. -->
 
@@ -776,11 +755,16 @@ NOTE INTEGREATE HOW DESIGNING FOR AUTHENITITY IS A CHALLENGE HERE WHICH IS ALIGN
 <!-- Self-contained so many things set up by default,
 a default screen size, asset creation tools, online community, comments and friend section.  -->
 
-Code playgrounds, as described in chapter two, are an online environment used to test, share or invite help from online users. My choice to use a text code environment risked maximising barriers to participation by not profiting from design decisions in specialist coding software to help novice coders (previously explored in LR). Those decisions / principles also address they key conflict / tension explored in this section. Coding is part partly due to unfamiliarity with tools and complexity of working environment and X - and Y. [CF GOOD SUMMARY].
+Code playgrounds, as described in chapter two, are an online environment used to test, share or invite help from online users. My choice to use a text code environment risked maximising barriers to participation by not profiting from design decisions in specialist coding software to help novice coders (previously explored in LR). These elements include steps to reducing syntax errors, shielding complexity, facilitating community commenting, sharing, remixing and other forms of collaboration.
 
-These elements include steps to reducing syntax errors, shielding complexity, facilitating community commenting, sharing, remixing and other forms of collaboration. To address this I explore my own design decisions that and existing features of a code playground align with those key principles.
+Those principles help address the key tension explored in this section. Coding is a tricky process partly due to unfamiliarity with and potential complexity of code authoring tools and environments. To shed light on this conflict and to situate later findings, this section surfaces observations from my journal notes and video data on how participants used the tools introduced and my design adaptations.
 
-To shed light on this conflict and to situate later findings, this section surfaces observations from my journal notes and video data on how participants used the tools introduced.
+<!--
+These elements include steps to reducing syntax errors, shielding complexity, facilitating community commenting, sharing, remixing and other forms of collaboration. -->
+
+<!-- To address this I explore my own design decisions that and existing features of a code playground align with those key principles. -->
+
+
 
 <!-- NOTE - WHERE EXACTLY ARE THEY EXPLORED? -->
 
@@ -790,7 +774,7 @@ While the scope of this study is not on the micro-level of tool use, it is usefu
 
 #### Addressing code syntax errors
 
-Many software projects aimed at for novices use visual coding (block coding) approaches to reduce complexities of code use. This process reduced possibilities for syntax errors and often provides a limited set of blocks to reduce complexitiy. While this approach not explored here for reasons previously outlined, there are some features of the glitch code playground which help. For example, the environment can detect the file type as javascript from the file extension and then uses a static analysis tool (linter) scan the code for signs of inconsistencies of code and syntax errors and highlight them [@tomasdottir_why_2017].
+Many software projects aimed at for novices use visual coding (block coding) approaches to reduce complexities of code use. This process reduced possibilities for syntax errors and often provides a limited set of blocks to reduce complexity. While this approach not explored here for reasons previously outlined, there are some features of the glitch code playground which help. For example, the environment can detect the file type as javascript from the file extension and then uses a static analysis tool (linter) scan the code for signs of inconsistencies of code and syntax errors and highlight them [@tomasdottir_why_2017].
 
 In glitch such code syntax errors (GL) are highlighted via a red dot provided a quick visual indication of where the error occurred. In addition if the user hovered over the dot would give an error message. In analysis of pair interactions, I frequently (how much?) observed the non-coding peer notice and point out the red dot, thus preventing further errors. The process worked especially well when altering existing templated code, a process which is explored in the next section.
 
@@ -881,9 +865,7 @@ A web code project using the chosen game framework phaser consists of several in
 My choice to use a starter template was driven by early experience in the experimental period of the design. In participant feedback for P1, one parent indicated that it took too long before in the planning stage and called for more hands on play and use of the tools of production before being called on to make creative decisions. The parent likened this to an arts studio approach. I realised that to allow for this playful experimentation, a purely structural template was insufficent and that a working game template was preferred. To create the template I drew on the structure of three online tutorials to support create a two-dimensional platformer game [^1].
 
 
-The following section explores these designs decisions by drawing on HCI theory and in particular the concept of affordances (with a mediated action perspective) understood from a socio-cultural perpsective as 'technology affordances as possibilities for human actions mediated by cultural means' [@kaptelinin_affordances_2012, p.927].
-
-
+The following section explores these designs decisions by drawing on HCI theory and in particular the concept of affordances (with a mediated action perspective) understood from a socio-cultural perspective as 'technology affordances as possibilities for human actions mediated by cultural means' [@kaptelinin_affordances_2012, p.927].
 
 
 <!-- The use of template was an immediate, intuitive way to bring something to the table as a starting point to develop.  -->
@@ -926,6 +908,7 @@ A later discussion section in this chapter illustrates a more complex interactio
 #### Key Design affordances included in the game template
 
 The initial use of a working structural template was an intuitive response based on my own experience of teaching technology which aligns with UMC methods.
+
 
 To help guide the experimentation of users, I  highlight simple changes to the code that were easily recognisable game experience features.
 
@@ -1170,8 +1153,6 @@ My motivations driving this design work were to mitigate potential learner alien
 
 <!-- I addressed this by printing step by step tutorials. However the paper based resources did not allow users to copy and paste code, a  characteristic of online code examples and tutorials which facilitates quick progress. -->
 
-
-
 <!--
 
 In trying to organise and represent code examples to participants in a logical way, I experimented with different categories and themes to contains the emerging game elements. I also explored the concept of mapping the different challenges by difficulty on a map via structuring via concentric rings. An example of the kind of grouping sketch used is included below as Figure 4.x.  
@@ -1267,29 +1248,34 @@ The process of researching conceptions of agency has allowed me to align my intu
 
 
 ### Discussion on authenticity and agency concerning tools and resources  
-
-This chapter has exposed the tensions that developed in the activity systems and subsequent evolution the tools used. The term tools here is used broadly in line with AT's definition to include code authoring environment, supporting resources of printed and digital format, etc. This section begins to explore the value and implications of my choice to privilege authenticity of tool choice in this design.
-
 <!-- NOTE- This chapter's coverage of tool use is incomplete and the use of physical arcade consoles is explored in chapter six.  -->
 
-In the video data there are examples showing an inspirational or engaging impact _lifting the hood_ (see LR) on previously unknown technology. For examples, exchanges among participants that communicated a sense of awe of how much effort and coding must be involved in a professional game based on the relative complexity of the code of their simple game.  
+This chapter has exposed the tensions that developed in the activity systems and subsequent evolution the tools used include code authoring environment, supporting resources of printed and digital format. This section begins to explore the value and implications of my choice to privilege authenticity of tool choice in this design. The previous section can be viewed from perspective of designing coding tools to increase agency in practical terms by providing affordances to achieve common design aims and thought removing barriers or aspects of negative liberty [@matusov_mapping_2016, p. 433]. In addition, I propose that the process of using more authentic toolsets has the potential for engendering transformative agency [@engestrom2006development; @haapasaari_emergence_2016; @sannino_formative_2016].
 
-The motivations for creating starter templates are similar for both educators and professional template creators. The goal being to want to shield new users from the complexity of the underlying configuration of interrelated web-technologies and instead highlight design affordances that facilitate creative agency. This strong alignment with authentic, professional practice may help learners transition to other forms of web coding projects, due to the similarity of as this element of practice.
+<!-- _lifting the hood_ (see LR) -->
+
+The process of creating a starting template aligns with the motivations and techniques of Microworlds and broader constructionist design principles explored in the Literature review [@resnick_design_2005].
+Examples include reducing syntax errors through block coding,  [@resnick_reflections_2005] and creating a Microwold like Mathland where because the turtle speaks only LOGO, children are drawn to speak LOGO to progress. In my design, I mirrored the goal of simplifying the creative process by implementing the following steps: creating the template, pulling up relevant variables to the fore, creating a grid to allow easy level design, and simplifying the syntax and the structure of the game code.
+
+The motivations for creating starter templates are similar for both educators and professional template creators. The goal being to want to shield new users from the complexity of the underlying configuration of interrelated web-technologies and instead highlight design affordances that facilitate creative agency.  This strong alignment with authentic, professional practice may help learners transition to other forms of web coding projects, due to the similarity of as this element of practice.
+
+The emerging design decisions of use of tools and documentation create a kind of border between the participants experience and the open ecology of learning to code in the wild. One built as a shield area within a more genuine ecology of authentic tool use and practices. In outlining constructionist design principles Resnick refers to this process as using black boxes.
 
 As outlined above, to avoid the barriers experienced when searching authentic, developer-focused documentation and the support forums, I created  bespoke code examples in an online collection. Thus creating a pragmatic replica of authentic process of finding and incorporating code snippets. The careful alignment between tools code documentation and the starting template was designed to address barriers to the development skills used in authentic code based game making and professional coding. The impact of this is explored chapter five.
 
-An illustrative design tension emerged surrounding which kind of documentation to prioritise. After initially  steering participants directly to code snippets, I subsequently directed them instead to step by step tutorials which also included a link to the code snippets. In retrospect, my interpretation is that I prioritised the traditional form of instruction over more authentic, bricolage-like (see LR) developer practices. I propose it would be best to rectify this value judgement, in future iterations of the design giving each equal weight.  
+An illustrative design tension emerged surrounding which kind of documentation to prioritise. After initially steering participants directly to code snippets, I subsequently directed them instead to step by step tutorials which also included a link to the code snippets. I shifted between prioritising instruction-based practices and more piecemeal, bricolage inspired (see LR) developer practices. Whilst the process of instruction is problematic in terms of learner agency this vies with the practicality to establish a common understanding and shared framework for production.
 
+Turning to broader, non-instrumental conceptions of agency, conversations between participants showing an inspirational or engaging impact on previously unknown technology. For examples, exchanges among participants that communicated a sense of awe of how much effort and coding must be involved in a professional game based on the relative complexity of the code of their simple game.    
 
-The previous section can be viewed from perspective of designing coding tools to increase instrumental agency thought removing barriers.
-
-The process of using more authentic toolsets has the potential to increase authorial agency. In the example below, greater diversity of tools set
+    Pearl: It just shows you what goes into these games.
+    Student Helper 3: Think about how much effort goes into.
+    Pearl: You just take things for granted don’t you?
 
 Analysis of the video data of participants using the more fragmented tool set used, which involve one online tool for coding and others for asset authoring, reveals a large number of broader digital literacy skills. For example, the processes of replacing a block image with a bespoke pixel sprite which comprised: file downloading; file migration using the browser and file manager; browser tab navigation; graphics tool use in Piskel (a simplified Photoshop including - crop, fill and export tools); copying and paste text code; and selecting more than one lines of text code with mouse or keyboard shortcuts. Undertaking the full process involved learning a complex chain of  these individual actions. Some participants became remarkably adapt at this, thus transforming this chain of actions into a fluid operation. Learners who had mastered the skills were asked by others for help.
 
-While the use of authentic tools and processes, while challenging for novices, can be facilitated by careful alignment of key design principles and other pedagogies.
+In summary, this chapter has explored the complexity of the interacting tools and documentation in relation to their authenticity and impact on participant experiences. While the use of authentic tools and processes, while challenging for novices, can be facilitated by careful alignment of key design principles. However, some barriers involving social and cultural factors suited interventions of other pedagogies. In later chapters I explore the interaction between authenticity and agency in more depth using the emerging pedagogies as an analytical lens.
 
-Later, chapter six  chapter explores the potential for drama processes to address learner anxiety in this domain.
+<!-- Later, chapter six  chapter explores the potential for drama processes to address learner anxiety in this domain. -->
 
 ### Summary of barriers and tensions explored in this chapter
 
@@ -1320,7 +1306,6 @@ or this one
 https://docs.google.com/document/d/18HrRPPx0-fj3PXVJTAf2dzYNTBSYGikpV_U0hu46r2c/edit
 
 NOTE - PERHAPS INCLUDE ELEMENT OF AUTHENTICITY HERE AND SIGNPOST TO FUTURE WORK?
-
 
 
 ### Link to next chapter
@@ -1462,99 +1447,3 @@ https://docs.google.com/document/d/1DRgpgIUfq5XIktYy-lX4WlviUDnffNc0v8SOeLGgHho/
 [^11]: https://phaser.io/examples/v2
 [^12]:https://docs.google.com/document/d/1zUw4xpWT9p2LIqTaZdVN0JRpShvVFG3UQqmsxRriE6s/edit?pli=1 Example of code in google docs
 Gilbert is the worsted name.
-
-
-### Discussion on Authenticity of Tools and Resources - SHIFT OR REVISE SOMEHOW TO REALLY REDUCE IMPACT? TO METHODS AGAIN?
-
-This chapter has exposed the tensions that developed in the activity systems and subsequent evolution the tools used. The term tools here is used broadly in line with AT's definition to include code authoring environment, supporting resources of printed and digital format, etc. This section begins to explore the value and implications of my choice to privilege authenticity of tool choice in this design.
-
-<!-- NOTE- This chapter's coverage of tool use is incomplete and the use of physical arcade consoles is explored in chapter six.  -->
-
-#### Empowerment implications of lifting the hood to expose underlying technology
-
-An inspirational aspect of _lifting the hood_ (see LR) on previously unknown technology was reflected in a conversation among adult participants. They communicated a sense of awe of how much effort and coding must be involved in a professional game based on the relative complexity of the code of their simple game.  
-
-    Pearl: It just shows you what goes into these games.
-    Student Helper3: Think about how much effort goes into.
-    Pearl: You just take things for granted don’t you?
-    [FIND IN 2019-03-18-ch_pa_TOCODE].
-
-Such finding support the motivations of many youth programs which advocate exploration of the technologies which are normally hidden from view as an tactic for empowerment.
-
-<!-- There are similarities and differences between the use of code playgrounds and templates by novices and professionals. A possible interpretation of the use of a template as scaffolding provided in an educational context is that that support is inconsistent with a work place setting environment. However, the use of starter templates is also a common work place tactic.
-
-The motivations for creating starter templates are similar. Both educators and professional template creators want to shield new users from the complexity of the underlying web-technology and instead highlight design affordances that facilitate creative agency. For the learners of this study, agency is expressed via inclusion of home interests, play with dynamics and game layout. The motivations of the professional would include experimentation to check if the framework will support desired end user features. This work helps analysis if it is worth allocating time learning the details of the framework in question.   -->
-
-#### Authenticity of processes and documentation
-
-From early stages in this design, I stopped encouraging participants to search within authentic documentation and help forum for the professional and amateur users of the Phaser javascript library. Instead, in response to participant need, I created  bespoke code examples in an online collection. Thus creating a pragmatic replica of authentic process of finding and incorporating code snippets. The careful alignment between tools code documentation and the starting template was designed to address barriers to the development skills used in authentic code based game making and professional coding. The impact of this is explored chapter five.
-
-An illustrative design tension emerged surrounding which kind of documentation to prioritise. After initially  steering participants directly to code snippets, I subsequently directed them instead to step by step tutorials which also included a link to the code snippets. In retrospect, my interpretation is that I prioritised the traditional form of instruction over more authentic, bricolage-like (see LR) developer practices. I propose it would be best to rectify this value judgement, in future iterations of the design giving each equal weight.  
-
-<!-- Research on other toolsets is instructive when exploring learning design tensions involving issues of authenticity and agency. -->
-<!-- MOVE TO LR
-Existing research on computing projects in the work of Papert [-@papert_mindstorms_1980] on Mircoworlds and subsequent research on programming tools in the constructionist tradition were explored in brief in the literature review. [@kafai_constructionism_1996-1; @kafai_mindstorms_2014]. While, examples of a Microworlds are diverse [@rieber_microworlds_2004], a Turtle drawing world using  LOGO can be used here as an example. In the Mathland of the turtle which speaks only LOGO, children are drawn to speak LOGO to progress. The affordances of the physical turtle provide visible motivation.  -->
-
-#### Analysing the use of code playground and templated approach through the lens of authenticity
-
-REFRAME ANALYSIS VIA HCI / AFFORDENCES / HEURISTICS? SIGNPOST AS A MID LEVEL PEDAGOGY POTENTIALY REPLICABLE
-
-The process of creating a starting template in a coding environment that had been selected to remove common barriers to coding aligns with the motivations and techniques of Microworlds and broader constructionist design principles explored in the Literature review [@resnick_design_2005]. In scratch, the ability to reduce syntax errors through block coding was adopted.  [@resnick_reflections_2005]. In my design, I mirrored the goal of simplifying the creative process by implementing the following steps: creating the template, pulling up relevant variables to the fore, creating a grid to allow easy level design, and simplifying the syntax and the structure of the game code. In Papert's Mathland Microworld where the turtle speaks only LOGO, children are drawn to speak LOGO to progress. The affordances of the physical turtle provide visible motivation and the embedded concepts of algebra are experienced by children directly rather than through instruction. A similar process happens in this design. The map of learning dimensions outlined above details some of embedded concepts brought to the fore for students to bump against in their play and experimentation. An additional set of embedded concepts are GDPs which are explore in more details in chapter five.
-
-
-#### Linking authenticity and agency - SHIFT TO CHAPTER 6 OR 7
-
-These design decisions create a kind of border between the participants experience and the open ecology of learning to code in the wild. One built as a shield area within a more genuine ecology of authentic tool use and practices.
-
-In outlining constructionist design principles Resnick refers to this process as using black boxes.
-DUPLICATION - MOVE HERE?
-
-In chapters two and three the concepts of agency in learning settings uncovered varied forms of agency. The forms most related to this study was instrumental agency and authorial agency.  
-
-In later chapters I explore the interaction between authenticity and agency in more depth. In this section I highlight only perspectives form this chapter.  
-
-The previous section can be viewed from perspective of designing coding tools to increase instrumental agency thought removing barriers.
-
-The process of using more authentic toolsets has the potential to increase authorial agency. In the example below, greater diversity of tools set
-
-Analysis of the video data of participants using the more fragmented tool set used, which involve one online tool for coding and others for asset authoring, reveals a large number of broader digital literacy skills.
-
-For example, the processes of replacing a block image with a bespoke pixel sprite which comprised: file downloading; file migration using the browser and file manager; browser tab navigation; graphics tool use in Piskel (a simplified Photoshop including - crop, fill and export tools); copying and paste text code; and selecting more than one lines of text code with mouse or keyboard shortcuts. Undertaking the full process involved learning a complex chain of  these individual actions.
-
-<!-- IS THERE DUPLICATION HERE - OPERATION ALSO ANALYSE VIA AT? -->
-Some participants became remarkably adapt at this, thus transforming this chain of actions into a fluid operation. Learners who had mastered the skills were asked by others for help. The rapid adoption and transfer of these processes between community members indicated a high motivational factor for participants of incorporating self-created graphical elements, a topick which is also addressed in the following section.  
-
-<!-- **Future work** MakeCode Arcade shows promise as an easier to use microworld geared to the use of design patterns. While this is beyond the remit of this study I did gather data. However, I would regather to allow for better focus of research questions.   -->
-
-#### Summary / Link
-
-While the use of authentic tools and processes, while challenging for novices, can be facilitated by careful alignment of key design principles and other pedagogies. For example, while the complexity of authentic text code languages and authentic developer focused documentation can be intimidating, a following chapter explores the potential for drama processes to address learner anxiety in this domain.
-
-There is a connection in this process to foundational theories in the area of HCI and computing education.
-In particular the term and theory surrounding the design in in affordances to support and guide participant progress  is instructive and is explored in more details in chapter five and six.
-
-My own reluctance to simplify for the sake of authenticity was mitigated by the influence of participants and other collaborators in the design process. For example, the input of trainee teachers whose recent experience of supporting learners creative intitial scaffolding of task in much more detail than I would have.
-
-REHOME which increased the instrumental agency of the participants.
-
-The next section explores the mutual design process in more detail.
-
-
-<!-- This section compares the designed of this study with learning environment to the design factors of others exposed in research. Recap of constructionist heuristics   low-thresholds, wide-walls, high-ceiling -->
-<!-- While early use of microworlds as a "acceptable" authentic-ish a concept endorsed in literature on authentic approaches []. -->
-
-<!-- Scratch's design as a diverse multimedia tool invites experimentation and play but not in a particular field of maths or coding. Instead more general computing and design skills are imagined as outcomes. See Resnick's take on CT. -->
-
-<!-- Recap of constructionist heuristics   low-thresholds, wide-walls, high-ceiling -->
-<!-- While Resnick's principles / heuristics provide a useful tool for designers creating tools there was in early research less guidance for practitioners supporting creative coding activities . the goal is more to provide a playground. Much less intrinsic guidance to help seed community practices. -->
-<!-- Later research on Scratch also explored the value of the community for feedback and for motivational factors. Research shows the value of the Scratch online community has the potential to x, y and z. -->
-<!-- While, there is a potential to engage with wider  community tools like remix, online sharing, and to invite  are part of the glitch code playground community, I did not ask participant to focus their attention in this direction.
-- the community as they viewed each others assets and playtested games. -->
-
-<!-- extended by Kafai and Burke to include open windows - can be used to evaluate this design and other designs.   -->
-<!-- NOTE - ADD KEY DETAILS OF THE ACCESSIBILITY / CHALLENGE OF THE CORE TOOLS SET -->
-
-<!-- SIGNPOST TO NEXT CHAPTER OR REMOVE
-In my design, the use of GDPs in various scope forms this base: quick start activities; GDPs from a menu; novel GDPs/ -->
-
-<!-- The online only nature of the toolset does facilitate certain aspects of community participation by shifting the working space away from a desktop only environment, this facilitating some sharing by default.  -->
