--- a/_posts/thesis_chapters/tocs/2023-12-4-Design.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2023-12-4-Design.md_toc.md
@@ -1,8 +1,5 @@
 -   [Research Questions - June 2023](#research-questions---june-2023)
 -   [Chapter Introduction](#chapter-introduction)
--   [Exploring issues and context from practitioner interviews and
-    existing
-    research](#exploring-issues-and-context-from-practitioner-interviews-and-existing-research)
 -   [Short vignette illustrating shifts in scope of
     activity](#short-vignette-illustrating-shifts-in-scope-of-activity)
     -   [Vignette 4.1 - An example of game making activity in
@@ -14,8 +11,8 @@
             objectives](#environmental-factors-and-objectives)
         -   [Larger objective - Making games for an
             audience](#larger-objective---making-games-for-an-audience)
-        -   [Mid-level objective - Implementing game
-            elements](#mid-level-objective---implementing-game-elements)
+        -   [Mid-level objective - Constructing a game feature by
+            feature](#mid-level-objective---constructing-a-game-feature-by-feature)
         -   [Smaller objectives and actions - Implementing discrete code
             and design
             structures](#smaller-objectives-and-actions---implementing-discrete-code-and-design-structures)
@@ -79,17 +76,3 @@
     -   [Summary of barriers and tensions explored in this
         chapter](#summary-of-barriers-and-tensions-explored-in-this-chapter)
     -   [Link to next chapter](#link-to-next-chapter)
-    -   [Discussion on Authenticity of Tools and Resources - SHIFT OR
-        REVISE SOMEHOW TO REALLY REDUCE IMPACT? TO METHODS
-        AGAIN?](#discussion-on-authenticity-of-tools-and-resources---shift-or-revise-somehow-to-really-reduce-impact-to-methods-again)
-        -   [Empowerment implications of lifting the hood to expose
-            underlying
-            technology](#empowerment-implications-of-lifting-the-hood-to-expose-underlying-technology)
-        -   [Authenticity of processes and
-            documentation](#authenticity-of-processes-and-documentation)
-        -   [Analysing the use of code playground and templated approach
-            through the lens of
-            authenticity](#analysing-the-use-of-code-playground-and-templated-approach-through-the-lens-of-authenticity)
-        -   [Linking authenticity and agency - SHIFT TO CHAPTER 6 OR
-            7](#linking-authenticity-and-agency---shift-to-chapter-6-or-7)
-        -   [Summary / Link](#summary-link)
